configurando testes com jest

--- a/.env_example
+++ b/.env_example
@@ -1,1 +1,3 @@
 DB_CONN = string de conexao com mongo aqui;
+DB_CONN_TEST = string de conexao com mongo aqui, apenas alterar o nome da tabela para utilizar outra nos testes
+PORT = 3001
