--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.1",
+    "eslint": "^8.19.0",
     "express": "^4.18.1",
     "jest": "^28.1.2",
     "mongoose": "^6.4.1",
